--- a/website team d (copy)/moreinfo.html
+++ b/website team d (copy)/moreinfo.html
@@ -1,7 +1,7 @@
 <html>
 <button type="submit" onClick="back()">Back</button>
 <body>
-  <p>We are all students currently working in a company we developed by the request of our teacher makeing websites and maybe eventually makeing some small games eventually for all of the people. What we enjoy doing sometime during our freetime is building type games such as Minecraft,and etc.</p>
+  <p>lol We are all students currently working in a company we developed by the request of our teacher makeing websites and maybe eventually makeing some small games eventually for all of the people. What we enjoy doing sometime during our freetime is building type games such as Minecraft,and etc.</p>
 <p <span class="tab">
   <p <span class="tab">
     <p <span class="tab">
