--- a/website team d (copy)/coinflip.html
+++ b/website team d (copy)/coinflip.html
@@ -1,5 +1,5 @@
 <html>
-<button type="submit" onClick="flip()">Flip the Coin!</button><br>
+<button type="submit" onClick="flip()">Flip the Coin!!</button><br>
 <p id="side"></p>
 
 
@@ -9,7 +9,7 @@ function flip() {
    if(a) {
      coin("heads");
    } else {
-     coin("tailes");
+     coin("tails");
    }
 }
 function coin(coin) {
